--- a/src/pages/inicial/inicial.scss
+++ b/src/pages/inicial/inicial.scss
@@ -1,8 +1,16 @@
 .principal {
-  height: 80%;
+  height: 70%;
   background-image: url('../assets/imgs/brazao_Camara.svg');
   background-repeat: no-repeat;
   background-size: 60%;
   opacity: 0.5;
   background-position: center;
+}
+
+.tituloInicial {
+  font-weight: 900;
+  text-align: center;
+  color: #1f1515;
+  font-size: 20px;
+  padding-bottom: 3%;
 }
