--- a/src/pages/inicial/inicial.scss
+++ b/src/pages/inicial/inicial.scss
@@ -1,10 +1,42 @@
 .principal {
-  height: 70%;
+  height: 92%;
   background-image: url('../assets/imgs/brazao_Camara.svg');
   background-repeat: no-repeat;
-  background-size: 60%;
-  opacity: 0.5;
+  background-size: 60%;    
   background-position: center;
+}
+
+.principal img {
+  opacity: 0.5;
+}
+
+.rodape {
+  height: 8%;
+}
+
+.linha1 {
+  height: 40%;
+}
+
+.linha2 {
+  height: 60%;  
+  align-items: flex-end;
+}
+
+.textoLinha2 {
+  margin: 18% auto;
+  color: white;
+  // background-clip: text;
+  position:relative;
+  z-index:201
+  
+  
+}
+
+.linha3 {
+  height: 100%;
+  background: rgb(27, 26, 26);  
+  color: lightcyan;
 }
 
 .tituloInicial {
@@ -13,4 +45,20 @@
   color: #1f1515;
   font-size: 20px;
   padding-bottom: 3%;
+}
+
+.conteudo {
+  background-image: linear-gradient(to bottom,#1f1515, white 49%, white 50%, #1f1515);
+  color: transparent;
+  font-weight: 900;
+}
+
+.colunaBotao {
+  text-align: center;
+  vertical-align: middle;
+  padding: 2%;
+}
+
+.botao {  
+  color: lightcyan;
 }
