--- a/src/pages/inicial/inicial.scss
+++ b/src/pages/inicial/inicial.scss
@@ -2,7 +2,7 @@
   height: 92%;
   background-image: url('../assets/imgs/brazao_Camara.svg');
   background-repeat: no-repeat;
-  background-size: 60%;    
+  background-size: 150px;
   background-position: center;
 }
 
@@ -19,23 +19,23 @@
 }
 
 .linha2 {
-  height: 60%;  
+  height: 60%;
   align-items: flex-end;
 }
 
 .textoLinha2 {
-  margin: 18% auto;
+  margin: 50px auto;
   color: white;
   // background-clip: text;
   position:relative;
   z-index:201
-  
-  
+
+
 }
 
 .linha3 {
   height: 100%;
-  background: rgb(27, 26, 26);  
+  background: rgb(27, 26, 26);
   color: lightcyan;
 }
 
@@ -56,9 +56,9 @@
 .colunaBotao {
   text-align: center;
   vertical-align: middle;
-  padding: 2%;
+  padding: 10px;
 }
 
-.botao {  
+.botao {
   color: lightcyan;
 }
