--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,21 @@
 page-home {
 
 }
+
+.foto {
+    width: unset !important;
+    background-color: transparent;
+}
+
+.boasVindas {
+    font-size: 16px;
+}
+
+.icone button {
+    width: 10px;
+}
+
+.foto .item-inner {
+    padding-right: 0px!important;
+    border-bottom: unset !important;
+}
