--- a/src/components/resumo-pagamento/resumo-pagamento.scss
+++ b/src/components/resumo-pagamento/resumo-pagamento.scss
@@ -20,6 +20,15 @@
   text-align: right;
 }
 
+.selecionado {
+  color: green;
+}
+
+.menuMes {
+  color: lightgray;
+}
+
+
 // .cardComponente {
 //   border: 1px solid lightgray;
 //   border-radius: 10px;
