finalização implementação do resumo consumindo api

--- a/src/components/item-resumo-pagamento/item-resumo-pagamento.html
+++ b/src/components/item-resumo-pagamento/item-resumo-pagamento.html
@@ -13,7 +13,7 @@
   </ion-card-header>
   <ion-card-content>
       <ion-row class="descricao">
-          <ion-col>Data de Pagamento</ion-col>
+          <ion-col>Pagamento</ion-col>
           <ion-col>Salário Bruto</ion-col>
           <ion-col>Descontos</ion-col>
       </ion-row>
