selecao de contrato padrao

--- a/src/components/item-resumo-pagamento/item-resumo-pagamento.html
+++ b/src/components/item-resumo-pagamento/item-resumo-pagamento.html
@@ -2,13 +2,14 @@
   <ion-card-header>
       <ion-row>
           <ion-col class="titulo" float-left>
-              Resumo Pagamento - {{ resumo?.mes | date: 'MMMM/yyyy'}}
+              <!-- Resumo Pagamento - {{ resumo?.mes | date: 'MMMM/yyyy'}} -->
+              Resumo Pagamento
           </ion-col>
-          <ion-col>
+          <!-- <ion-col>
               <button float-right ion-button icon-start (click)="emitirPdf()">
                   <ion-icon name="document"></ion-icon>
               </button>
-          </ion-col>
+          </ion-col> -->
       </ion-row>
   </ion-card-header>
   <ion-card-content>
