--- a/src/components/item-resumo-pagamento/item-resumo-pagamento.html
+++ b/src/components/item-resumo-pagamento/item-resumo-pagamento.html
@@ -1,4 +1,4 @@
-<ion-card class="cardComponente">
+<ion-card class="cardComponente" (click)="abraPDF()">
   <ion-card-header>
       <ion-row>
           <ion-col class="titulo" float-left>
